Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43112

winrt: Rendering is broken when resizing the window

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 5.4.0
    • 5.4.0 RC
    • GUI: Window management
    • Windows 8.1 Modern UI
    • WinRT
    • 5367fa356233da4c0f28172a8f817791525f5457

      When resizing on WinRT PC (Modern UI), ANGLE is not informed of the size change. This is due to an ifdef added in winrt QPA which was improperly scoped only to Windows Phone.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andrew.knight Andrew Knight
            andrew.knight Andrew Knight
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes